--- a/estilos/styleCarta.css
+++ b/estilos/styleCarta.css
@@ -1,6 +1,60 @@
 body{
 
-    background-color: #F4B41A;
+    background-color: whitesmoke;
+}
+
+header{
+
+   
+    background-color:#F4B41A ;
+}
+
+#logo{
+    width: 80px;
+    height: 80px;
+    float: left;
+    margin: 10px 20px 20px 50px;
+    
+    
+    
+
+}
+
+#titulo{
+
+    margin: 20px 50px 20px 50px;
+    font-size: 40px;
+
+    color: #143D59;
+    text-align: left;
+    
+
+
+}
+
+
+ul{
+
+    list-style-type: none;
+   text-align: right;
+   margin-top: -50px;
+    
+}
+
+ul li{
+
+    display: inline;
+    text-align: center;
+    margin: 0 20px 0 0;
+    font-size: xx-large;
+   
+}
+
+ul li a{
+
+    text-decoration: none;
+    color: #143D59;
+    font-style: bold;
 }
 
 .titulo{
@@ -9,14 +63,38 @@ body{
     display: block;
 }
 
-.titulo h1{
+.titulo h2{
     font-size: 40px;
     text-align: center;
     
 }
 
-.titulo h2{
+.titulo h3{
     font-size: 30px;
     text-align: center;
     
+}
+
+ul{
+
+    list-style-type: none;
+   text-align: right;
+   
+    
+}
+
+ul li{
+
+    display: inline;
+    text-align: center;
+    margin: 0 20px 0 0;
+    font-size: xx-large;
+   
+}
+
+ul li a{
+
+    text-decoration: none;
+    color: #143D59;
+    font-style: bold;
 }
