--- a/estilos/styleContacto.css
+++ b/estilos/styleContacto.css
@@ -3,8 +3,60 @@ body{
     overflow-x: hidden;
     background-image: url(../img/pizzasetas.jpg);
 }
+header{
 
-h1{
+   
+    background-color:#F4B41A ;
+}
+
+#logo{
+    width: 80px;
+    height: 80px;
+    float: left;
+    margin: 10px 20px 20px 50px;
+    
+    
+    
+
+}
+
+#titulo{
+
+    margin: 20px 50px 20px 50px;
+    font-size: 40px;
+
+    color: #143D59;
+    text-align: left;
+    
+
+
+}
+
+
+ul{
+
+    list-style-type: none;
+   text-align: right;
+   margin-top: -50px;
+    
+}
+
+ul li{
+
+    display: inline;
+    text-align: center;
+    margin: 0 20px 0 0;
+    font-size: xx-large;
+   
+}
+
+ul li a{
+
+    text-decoration: none;
+    color: #143D59;
+    font-style: bold;
+}
+h2{
     background-color: #143D59;
     color: #F4B41A;
     position: relative;
