--- a/estilos/styleForm.css
+++ b/estilos/styleForm.css
@@ -9,3 +9,27 @@ h1{
     text-align: center;
     color: #F4B41A ;
 }
+
+ul{
+
+    list-style-type: none;
+   text-align: right;
+   
+    
+}
+
+ul li{
+
+    display: inline;
+    text-align: center;
+    margin: 0 20px 0 0;
+    font-size: xx-large;
+   
+}
+
+ul li a{
+
+    text-decoration: none;
+    color: #F4B41A;
+    font-style: bold;
+}
