--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ header{
 }
 
 #logo{
-    width: 90px;
-    height: 90px;
+    width: 80px;
+    height: 80px;
     float: left;
-    margin: 20px 50px 20px 50px;
+    margin: 10px 20px 20px 50px;
     
     
     
@@ -25,7 +25,8 @@ header{
 #titulo{
 
     margin: 20px 50px 20px 50px;
-    font-size: 100px;
+    font-size: 40px;
+
     color: #143D59;
     text-align: left;
     
@@ -33,11 +34,13 @@ header{
 
 }
 
+
+
 ul{
 
     list-style-type: none;
    text-align: right;
-   
+   margin-top: -50px;
     
 }
 
@@ -53,7 +56,7 @@ ul li{
 ul li a{
 
     text-decoration: none;
-    color: #F4B41A;
+    color: #143D59;
     font-style: bold;
 }
 
